Whitespace fix.

--- a/src/App/Category/Category.css
+++ b/src/App/Category/Category.css
@@ -1,159 +1,189 @@
-.categoryContainer{
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
+.categoryContainer {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
 
-.categoryTopDiv{
-    width: 100%;
-    height: 100vh;
-    background-image: url('../images/CategoryImg.svg');
-    background-size: cover;
-    background-repeat: no-repeat;
+.categoryTopDiv {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../images/CategoryImg.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 1;
+}
+
+.categoryFlexDiv {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.whatsappDiv > img {
+  margin-right: 2.5vw;
+  margin-top: 65vh;
+  position: sticky;
+}
+
+.categoryMiddleDiv {
+  width: 100%;
+  height: auto;
+  position: relative;
+  z-index: 2;
+  margin-top: -5.5vw;
+  background: #ffffff;
+  border-radius: 2.604vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.plantButtonContainer {
+  width: 95vw;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1.5vw;
+}
+
+.plantButtonContainer > button {
+  min-width: 17.904vw;
+  min-height: 6.803vh;
+  background: #003912;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  border: none;
+  border-radius: 2.604vw;
+  font-family: "Lufga Semibold";
+  font-size: 1.3rem;
+  padding: 0.8vw 0;
+}
+
+.recommendationContainer {
+  width: 95vw;
+  display: flex;
+  flex-direction: column;
+  margin-top: 8vh;
+}
+
+.recommendationTopDiv {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.recommendationTitle > span {
+  font-family: "Lufga Bold";
+  color: #000000;
+  font-size: 2.5rem;
+}
+
+.recommendationGridContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 3.5vh;
+}
+
+.recommendationTopGridContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto;
+  gap: 3vw;
+}
+
+.plantTitle > span {
+  font-family: "Lufga Medium";
+  font-size: 1.8rem;
+}
+
+
+.plantCardBottomDiv {
+  justify-content: space-between;
+}
+
+.plantCardLeftDiv {
     display: flex;
     flex-direction: column;
-    position: relative;
-    z-index: 1;
+    gap: 2vh;
 }
 
-.categoryFlexDiv{
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
+.plantDescription > span {
+  font-family: "Lufga";
+  font-size: 1.2rem;
+  color: #959595;
 }
 
-
-.whatsappDiv>img{
-    margin-right: 2.5vw;
-    margin-top: 65vh;
-    position: sticky;
+.plantPrice > span {
+    font-family: "Lufga Bold";
+    font-size: 1.2rem;
 }
 
-.categoryMiddleDiv{
-    width: 100%;
-    height: auto;
-    position: relative;
-    z-index: 2;
-    margin-top: -5.5vw;
-    background: #ffffff;
-    border-radius: 2.604vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.plantCardRightDiv > img {
+  width: 4rem;
 }
 
-.plantButtonContainer{
-    width: 95vw;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1.5vw;
+.recommendationMiddleDiv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.plantButtonContainer>button{
-    min-width: 17.904vw;
-    min-height: 6.803vh;
-    background: #003912;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffffff;
-    border: none;
-    border-radius: 2.604vw;
-    font-family: 'Lufga Semibold';
-    font-size: 1.3rem;
-    padding: 0.8vw 0;
+.offerContainer {
+  width: 78.125vw;
+  min-height: 34.966vh;
+  background: #003912;
+  border-radius: 2.604vw;
+  margin-top: 3vw;
+  margin-bottom: 3vw;
+  display: flex;
 }
 
-.recommendationContainer{
-    width: 95vw;
-    display: flex;
-    flex-direction: column;
-    margin-top: 8vh;
+.offerContent {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 6.055vw;
+  color: #ffffff;
+  gap: 0.3vw;
 }
 
-.recommendationTopDiv{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+.offerContent > span:nth-child(1) {
+  font-family: "Lufga Bold";
+  font-size: 2.5rem;
 }
 
-.recommendationTitle>span{
-    font-family: 'Lufga Bold';
-    color: #000000;
-    font-size: 2.5rem;
+.offerContent > span:nth-child(2) {
+  font-family: "Lufga Semibold";
+  font-size: 1.625rem;
 }
 
-.recommendationGridContainer{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 3.5vh;
+.offerImage {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  padding: 1vw;
 }
 
-.recommendationTopGridContainer{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: auto auto;
-    gap: 3vw;
+.recommendationBottomDiv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.recommendationMiddleDiv{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.recommendationBottomGridContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  gap: 3vw;
 }
 
-.offerContainer{
-    width: 78.125vw;
-    min-height: 34.966vh;
-    background:#003912;
-    border-radius: 2.604vw;
-    margin-top: 3vw;
-    margin-bottom: 3vw;
-    display: flex;
-}
-
-.offerContent{
-    width: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 6.055vw;
-    color: #ffffff;
-    gap: 0.3vw;
-}
-
-.offerContent>span:nth-child(1){
-    font-family:'Lufga Bold';
-    font-size: 2.5rem;
-}
-
-.offerContent>span:nth-child(2){
-    font-family:'Lufga Semibold';
-    font-size:1.625rem;
-}
-
-.offerImage{
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    padding: 1vw;
-}
-
-.recommendationBottomDiv{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.recommendationBottomGridContainer{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: auto;
-    gap: 3vw;
-}
-
-.categoryFooterDiv{
-    margin-top: 10vh;
+.categoryFooterDiv {
+  margin-top: 10vh;
 }
